--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "yandex-gpt-writer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A simple wrapper for interacting with the YandexGPT API.",
   "main": "lib/index.js",
-  "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
