--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "yandex-gpt-writer",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A simple wrapper for interacting with the YandexGPT API.",
+  "type": "module",
   "main": "lib/index.js",
   "scripts": {
     "start": "node index.js",
