--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "yandex-gpt-writer",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "A simple wrapper for interacting with the YandexGPT API.",
   "main": "lib/index.js",
+   "exports": {
+    "require": "./lib/index.js",
+    "import": "./lib/index.mjs"
+  },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "lib/index.js",
+    "lib/index.mjs"
+  ],
   "keywords": [
     "yandex",
     "gpt",
